--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "raisely": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "raisely"
+    }
+  },
+  "defaultProject": "raisely",
+  "cli": {
+    "analytics": "95389434-3e71-415c-81cd-05d5fd0fd365"
+  }
 }
